# pharmacy

./: .cpanel.yml  .gitignore  MAINTENANCE.md  README.md  check_db.py  check_db_summary.py  dev.sh  find_heads.py  fix_production_db.py  fix_schema.py  out.json  pyproject.toml  query_abbos.py  query_payout.py  render.yaml  requirements.txt  targeted_cleanup.py  test_fk.py
backend/: .gitignore  check_db_schema.py  check_large_invoices.py  cleanup_invoice.py  clear_fact_assignments.py  clear_stats.py  create_deputy.py  create_test_user.py  db_check.py  debug_balances.py  debug_query.py  error_log.txt  find_april_invoices.py  fix_db_notes.py  fix_pro_farm.py  list_tables.py  optimize_db.py  passenger_wsgi.py  query_inv.py  query_inv2.py  query_payout.py  query_product.py  query_product2.py  query_res.py  requirements.txt  research_427.py  reset_balances.py  reset_db_roles.py  restore_balances.py  run.py  search_ledger.py  test_500.py  test_api.py  test_curl.py  test_dashboard.py  test_endpoint.py  test_expenses.py  test_plans_medrep.py  test_profit.py  test_profit_all.py  (+10 more)
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js
mobile/: .flutter-plugins-dependencies  analysis_errors.txt  analysis_new.txt  analyze_results_new.txt  build_debug.txt  build_output.txt  pubspec.yaml
scratch/: check_2.29b_global.py  check_220m.py  check_bt_types.py  check_db_users.py  check_duplicate_orgs.py  check_raw_sql.py  check_receipts_final.py  check_recent_tx.py  check_totals.py  debug_query.py  diag_220m.py  diag_220m_raw.py  find_220m.py  (+6 more)
(+572 files in other folders)
